--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body {
 
 h1 {
 	color: red;
+	text-align: center;
+        text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68)
 }
 
 header, .wrapper, footer {
@@ -13,22 +15,32 @@ header, .wrapper, footer {
 	margin: 20px auto;
 }
 
+.menubar li a {
+    	display: block;
+}
+
+.menubar {
+    	display: inline-block;
+    	margin: 0;
+    	padding: 0;
+    	zoom:1;
+}
+
 header nav {
-	background: #5DC1B9;
-	overflow: hidden;
+	margin-left: auto;
+	margin-right: auto;
+    	font-size: large;
+    	text-align: center;
 }
 
-header nav ul {
-	list-style: none;
-}
-
-header nav ul li {
-	float: left;
-}
-
-header nav ul li a {
-	padding: 10px 20px;
+.menubar li {
 	display: block;
-	color: #fff;
-	text-decoration: none;
+	float: left;
+	width: 100px;
+	min-height: 1.5em;
+    	background: #222;
+    	border: #444 solid 2px;
+    	padding: 3px;
+    	margin: 4px;
 }
+
