--- a/style.css
+++ b/style.css
@@ -9,7 +9,11 @@ h1 {
         text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68)
 }
 
-header, .wrapper, footer {
+h2 {
+	color: goldenrod;
+}
+
+header, .main , footer {
 	width: 90%;
 	max-width: 1000px;
 	margin: 20px auto;
