Changing h1 font and color

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ body {
 }
 
 h1 {
-	color: red;
 	text-align: center;
         text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68)
+	color: crimson;
+	font-variant: small-caps;
 }
 
 h2 {
