--- a/style.css
+++ b/style.css
@@ -28,8 +28,8 @@ header, .main , footer {
 	color: #D3D3D3;
 }
 
-.main p blockquote {
-	color: #808088;
+a:hover {
+	color: goldenrod;
 }
 
 .menubar li a {
@@ -64,5 +64,24 @@ header nav {
 }
 
 .menubar li:hover {
-    background: #000;
+    	background: #000;
+}
+
+.menubar li ul {
+	visibility: hidden;
+	position: absolute;
+	padding-top: 10px;
+}
+
+.menubar li:hover ul {
+	visibility: visible;
+	padding-left: 0;
+	margin-left: -7px;
+}
+
+.menubar li ul li {
+    	float: none;
+    	position: relative;
+    	width: 150px;
+    	text-align: left;
 }
