--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ body {
 	background: black;
 }
 
+footer {
+	clear: both;
+	text-align: center;
+	padding-top: 2em;
+	font-size: larger;
+}
+
 h1 {
 	text-align: center;
         text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68);
