--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
-	color: white;
-	background: black;
+	margin: auto ;
+	color: #ddd ;
+	background: rgba(0,0,0,.3) ;
+	padding: 10px ;
+	border-radius: 50px ;
 }
 
 footer {
