body background changed

--- a/style.css
+++ b/style.css
@@ -1,9 +1,6 @@
 body {
-	margin: auto ;
-	color: #ddd ;
-	background: rgba(0,0,0,.3) ;
-	padding: 10px ;
-	border-radius: 50px ;
+	color: white ;
+	background: black ;
 }
 
 footer {
