--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ footer a {
 h1 {
 	text-align: center;
         text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68);
-	color: crimson;
+	color: lightblue;
 	font-variant: small-caps;
 }
 
