--- a/style.css
+++ b/style.css
@@ -14,6 +14,20 @@ footer a {
         color: #5DC1B9;
 }
 
+pre {
+	background: #222 ;
+	border: 1px solid lime ;
+	border-radius: 20px ;
+	padding: 20px ;
+	margin: 30px ;
+}
+
+code {
+	background: #222 ;
+	color: lime ;
+	border-radius: 5px ;
+}
+
 h1 {
 	text-align: center;
         text-shadow: -1px 3px 3px rgba(0, 0, 0, 0.68);
